# mkdocs-example-test

./: 404.html  index.html  mkdocs.yml  pyproject.toml
codigo/code_index/: index.html
docs/: index.md  pagina_2.md
docs/codigo/: code_index.md
pagina_2/: index.html
search/: search_index.json
